Using Transform gizmos in Sculpt Mode while MultiRes is activated crashes Blender #69816

Closed
opened 2019-09-12 22:09:41 +02:00 by Frozen_Death_Knight · 3 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-12 11:33, hash: 1954723635

Short description of error
If MultiRes is inactivated the new Transform gizmos in Sculpt Mode can be used to transform your mesh, which also change the shape of your model with MultiRes activated afterwards. However, if you have it active while trying to use the Transform tools, Blender will crash every time.

Exact steps for others to reproduce the error
Follow the instructions of the video.

Desktop 2019.09.12 - 22.01.55.01.mp4

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-12 11:33, hash: `1954723635` **Short description of error** If MultiRes is inactivated the new Transform gizmos in Sculpt Mode can be used to transform your mesh, which also change the shape of your model with MultiRes activated afterwards. However, if you have it active while trying to use the Transform tools, Blender will crash every time. **Exact steps for others to reproduce the error** Follow the instructions of the video. [Desktop 2019.09.12 - 22.01.55.01.mp4](https://archive.blender.org/developer/F7740706/Desktop_2019.09.12_-_22.01.55.01.mp4)

Added subscriber: @Frozen_Death_Knight

Added subscriber: @Frozen_Death_Knight

This issue was referenced by 27b82bbb75

This issue was referenced by 27b82bbb75c5fd527b6b22682f8d173f6040644a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Pablo Dobarro was assigned by Germano Cavalcante 2019-09-17 14:08:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69816
No description provided.