Fix T69816: Using Transform gizmos in Sculpt Mode while MultiRes is activated crashes Blender

Reviewed By: jbakker

Maniphest Tasks: T69816

Differential Revision: https://developer.blender.org/D5779